# z-amcv2

./: .pa11yrc.json  CAMPAIGN_PERFORMANCE_IMPLEMENTATION.md  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  E2E_TESTING_IMPLEMENTATION_SUMMARY.md  FEATURES.md  FRONTEND_ERROR_FIXES.md  INFRASTRUCTURE_OVERVIEW.md  MANUAL_TEST_MATRIX.md  OPTIMIZATION_SUMMARY.md  PROGRESS_UPDATE_SUMMARY.md  PROJECT_STATUS.md  README.md  RESOURCE_OPTIMIZATION.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_PLAN.md  TESTING_GUIDE.md  cypress.config.ts  env.example  index.html  lighthouse.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.test.json  tsconfig.test.tsbuildinfo  vite.config.ts
apps/bff/: .gitignore  Dockerfile  Makefile  README.md  TESTING.md  coverage  docker-compose.yml  env.example  go.mod  go.sum  gqlgen.yml  main.go  schema.sql
infra/: DEPLOYMENT_GUIDE.md  README.md
infra/compose/: Makefile  docker-compose.yml  env.example
infra/k8s/: deploy.sh  values-production.yaml
public/: manifest.json  robots.txt  sw.js
public/icons/: .gitkeep
reports/: playwright-results.json  playwright-results.xml
reports/playwright-report/: index.html
scripts/: generate-icons.js  generate-icons.mjs  generate-production-secrets.sh  run-e2e-tests.sh  security-validation.sh  test-health-endpoints.ps1  test-health-endpoints.sh
services/connectors/: Makefile  README.md  docker-compose.yml  env.example  go.mod
services/orchestrator/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  run_campaign_performance_tests.py  test_event_flow.py
services/orchestrator/src/orchestrator/: __init__.py  config.py  main.py  models.py
services/orchestrator/src/orchestrator/api/: __init__.py  campaign_performance.py  dependencies.py  routes.py
services/orchestrator/src/orchestrator/services/: __init__.py  campaign_performance_service.py  langchain_service.py  nats_service.py  qdrant_service.py  strategy_service.py
services/orchestrator/tests/: __init__.py  conftest.py  test_api.py  test_campaign_performance_events.py  test_event_flow_integration.py  test_strategy_service.py
src/: App.tsx  index.css
src/hooks/: useAnalyticsOperations.ts  useAssetOperations.ts  useCampaignOperations.ts  useCampaignPerformanceSubscription.ts  useNotificationSubscriptions.ts  useResponsive.ts
src/lib/: accessibility.ts  graphql-client.ts
src/pages/: AnalyticsPage.tsx  (+6 more)
supabase/: config.toml
zamc-web-chart/: .gitignore  Chart.yaml  README.md  values.yaml
(+137 files in other folders)
